# codex-switcher

./: CHANGELOG.en.md  CHANGELOG.md  README.md  README_EN.md  floating-controls.html  floating.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
locales/: manifest.json
locales/en-US/: native.json  ui.json
locales/zh-CN/: native.json  ui.json
scripts/: bump-version.mjs  check-i18n.mjs  release-notes.mjs  release.mjs  release.test.mjs  verify-updater-manifest.mjs
src/: App.css  App.tsx  FloatingControls.tsx  FloatingWidget.tsx  TrayMenu.tsx  floating-controls-main.tsx  floating-main.tsx  main.tsx  tray-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_menu.rs  floating.rs  i18n.rs  lib.rs  taskbar_widget.rs  tray.rs  types.rs  web.rs
src-tauri/src/api/: usage.rs
src-tauri/src/auth/: storage.rs  switcher.rs  token_refresh.rs
src-tauri/src/commands/: account.rs  account_stats.rs  mod.rs  oauth.rs  process.rs  settings.rs  usage.rs  window.rs
src/components/: AccountCard.tsx  AccountRow.tsx  AccountUsageStats.tsx  AddAccountModal.tsx  SelectMenu.tsx  TooltipLayer.tsx  UpdateChecker.tsx  UsageBar.tsx  WindowsDisplaySettings.tsx  index.ts
src/hooks/: useAccounts.ts  useForceCloseCodexProcesses.ts
src/i18n/: index.ts
src/lib/: autoWarmupPolicy.ts  platform.ts  warmupFailures.ts
src/types/: index.ts
