[package]
name = "codex-switcher"
version = "0.101.1"
description = "A multi-account manager for Codex CLI"
authors = ["lampese"]
edition = "2021"
default-run = "codex-switcher"

[lib]
name = "codex_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tiny_http = "0.12"
webbrowser = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
thiserror = "2"
anyhow = "1"
urlencoding = "2"
futures = "0.3"
include_dir = "0.7"
sys-locale = "0.3"
url = "2"
flate2 = "1"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
toml = "0.9"
toml_edit = "0.25"

[target.'cfg(any(target_os = "macos", target_os = "linux", windows))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55"
